# Lyrics-Guesser-Mini-Game

./: .gitignore  CLAUDE.md  GEMINI.md  README.md
.gemini/: settings.json
.gemini/hooks/: flutter-backend-health.sh  game-balance-check.sh  post-schema-change.sh
.gemini/skills/api-sync-expert/: SKILL.md
.gemini/skills/api-sync-expert/references/: mapping.md
.gemini/skills/lyrics-game-logic-tester/: SKILL.md
.gemini/skills/lyrics-game-logic-tester/scripts/: test_logic.py
.gemini/skills/mock-music-provider/: SKILL.md
backend/: .dockerignore  Dockerfile  pyproject.toml  template.yaml
backend/app/: config.py  main.py  models.py  utils.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: game.py
backend/app/core/: config.py  deezer.py  itunes.py  security.py  song_picker.py  utils.py
backend/app/crud/: base.py  crud_item.py  crud_user.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: item.py  user.py
backend/app/schemas/: game.py  item.py  user.py
backend/app/tests/: conftest.py
backend/app/tests/api/v1/: test_users.py
frontend/: pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/assets/GlassIcon.icon/: icon.json
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: app_theme.dart  main.dart
frontend/lib/bloc/: game_bloc.dart  game_event.dart  game_state.dart
frontend/lib/models/: game_mode.dart
frontend/lib/screens/: game_screen.dart  home_screen.dart  loading_view.dart
frontend/web/: index.html
infra/: main.tf  outputs.tf  variables.tf
(+7 files in other folders)
